# benepass-takehome

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  Makefile  README.md  claude.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dagster_project/: constants.py  definitions.py
dagster_project/assets/: dbt.py  ingestion.py
dagster_project/checks/: data_quality.py  schema_drift.py
dagster_project/resources/: duckdb.py
data/: benefit_accounts.csv  employees.csv  transactions.csv
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/macros/: build_dq_flags.sql  clean_string.sql  mask_pii.sql  normalize_timestamp.sql  safe_cast_numeric.sql
dbt_project/models/: groups.yml
dbt_project/models/marts/: dim_benefit_programs.sql  dim_employees.sql  dim_merchants.sql  fact_transactions.sql  schema.yml
dbt_project/models/quality/: quarantine_transactions.sql  schema.yml
dbt_project/models/staging/: schema.yml  sources.yml  stg_benefit_accounts.sql  stg_employees.sql  stg_transactions.sql
dbt_project/seeds/: category_benefit_mappings.csv  schema.yml
evidence/: Dockerfile
evidence/pages/: 2-data-quality.md  data-quality.md  employees.md  index.md
evidence/sources/benepass/: connection.yaml  dim_benefit_programs.sql  dim_employees.sql  dim_merchants.sql  fact_transactions.sql  quarantine_transactions.sql
infra/: cloud-init.yml  main.tf  variables.tf
tests/: conftest.py  test_data_quality.py  test_duckdb_resource.py  test_ingestion.py  test_pipeline_e2e.py  test_schema_drift.py
